--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,8 +1,11 @@
 :root {
   background-color: #282c34;
   color: white;
+  margin-top: 3.35rem;
 }
 
 .App {
   text-align: center;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Rubik:500');
