--- a/src/components/ShipTracker/ShipTracker.module.css
+++ b/src/components/ShipTracker/ShipTracker.module.css
@@ -2,4 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    background-image: url('https://plus.unsplash.com/premium_photo-1661963559074-9655a9404f1a?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y2FyZ28lMjBzaGlwc3xlbnwwfHwwfHx8MA%3D%3D');
+    background-repeat: no-repeat;
+    background-size:contain; 
+    background-position: top center;
+    background-attachment: fixed;
+    background-color: #282c34; 
+
+    height: 53.2vh;
 }
