--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #616467;
+    background-color: #222222;
     width: 100%;
     position: fixed; /* Changed to fixed for a true sticky effect */
     top: 0; /* Stick to the top */
@@ -19,7 +19,7 @@
 
 .nav-bar-card {
     flex: 1;
-    padding: 1rem 2rem;
+    padding: 1rem 0rem;
     color: white;
     text-decoration: none;
     text-align: center;
@@ -28,9 +28,9 @@
 
 .nav-bar-card:hover {
     transition: 200ms;
-    background-color: #4b4c4e;
+    background-color: #292a2d;
 }
 
 .nav-bar-card.active {
-    background-color: #4b4c4e;
+    background-color: #292a2d;
 }
